2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (lilypond-all): oops. remove debugging hack.

2005-01-02  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/invoking.itely (svg): revise.

2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: use sourcefilename iso. renameinput.

2006-01-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(NCSB_TTFS)): revise rule. Create
	<PostScriptName>.ttf instead of c059XXXttf.

	* lily/program-option.cc (LY_DEFINE): special support for
	--verbose, so it works before option init too.
 
	* mf/GNUmakefile (local-install): oops.

	* lily/lyric-hyphen.cc (print): oops.

	* buildscripts/pfx2ttf.fontforge: new file.
	
	* mf/GNUmakefile (NCSB_PATH): add vars for NCSB.
	($(outdir)/%.ttf): new rule. 

	* scm/define-grobs.scm (all-grob-descriptions): add font-interface
	to LyricHyphen.

	* lily/lyric-hyphen.cc (print): multiply hyphen height by
	font-size

2005-12-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.26
	
	* mf/GNUmakefile (install-fc-cache): remove old font.cache-1 files.

2005-12-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/font-config.cc (init_fontconfig): verbosity.

	* THANKS: add Muziekacademie Lede. 

	* scripts/musicxml2ly.py (print_voice_definitions): new function 
	(print_score_setup): new function
	(convert): read part definition to output staves properly.

	* python/musicxml.py (Measure.get_notes): new class. Wrap lists of
	Music_xml notes.

	* python/musicexp.py (Output_printer.__init__): use _ in data
	members.
	(Output_printer.unformatted_output): new function: no formatting,
	but count braces.
	(Duration.get_length): remove isinstance() checks for
	Output_printer everywhere.

	* input/regression/lyrics-bar.ly (texidoc): add
	Separating_line_group_engraver.

2005-12-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (framework_relocation): New function,
	factored from set_relocation ().